1. move fonts to assets 2. automatically copy assets and dll to executive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,9 @@ project(dnd)
 set(ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(src)
+
+# copy the necessary
+add_custom_target(copy
+    COMMAND ${CMAKE_COMMAND} -P ${ROOT}/copy.cmake
+)
+add_dependencies(main copy)
