--- a/src/D&D/core/CMakeLists.txt
+++ b/src/D&D/core/CMakeLists.txt
@@ -4,6 +4,7 @@ include_directories(${INCLUDE_DIR})
 include_directories(${ROOT}/thirdparty)
 include_directories(${ROOT}/ECS)
 
-set(CORE ${CMAKE_CURRENT_SOURCE_DIR}/DND_setup.cpp)
+set(CORE ${CMAKE_CURRENT_SOURCE_DIR}/DND_setup.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/DND_build.cpp)
 
 add_library(core ${CORE})
